--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,10 +16,18 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+anyhow = "1.0.75"
+once_cell = "1.19.0"
 
 [dependencies.windows]
 version = "0.52.0"
-features = ["Win32_System_Power"]
+features = [
+    "Win32_Foundation",
+    "Win32_System_Threading",
+    "Win32_System_Power",
+    "Win32_System_RemoteDesktop",
+    "Win32_UI_WindowsAndMessaging",
+]
 
 [dev-dependencies]
 dialoguer = "0.11.0"
