--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,6 @@ tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0.75"
-once_cell = "1.19.0"
 
 [dependencies.windows]
 version = "0.52.0"
@@ -27,6 +26,8 @@ features = [
     "Win32_System_Power",
     "Win32_System_RemoteDesktop",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_LibraryLoader",
+    "Win32_Graphics_Gdi",
 ]
 
 [dev-dependencies]
