--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.0",
     "@tauri-apps/api": "^1.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tauri-plugin-autostart-api": "https://github.com/tauri-apps/tauri-plugin-autostart#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.7",
