--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sleepy-locker"
-version = "0.0.1"
-description = "A Tauri App"
+version = "0.0.2"
+description = "Sleepy Locker"
 authors = ["you"]
 license = ""
 repository = ""
